--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 	"dependencies": {
 		"express": "^4.18.3",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.22.3",
+		"react-toastify": "^10.0.5"
 	},
 	"devDependencies": {
 		"@types/node": "^20.11.28",
