--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
 	},
 	"dependencies": {
 		"express": "^4.18.3",
+		"framer-motion": "^11.0.25",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.22.3",
-		"react-toastify": "^10.0.5"
+		"react-toastify": "^10.0.5",
+		"tailwind-merge": "^2.2.2"
 	},
 	"devDependencies": {
 		"@types/node": "^20.11.28",
